trying to fix alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -170,12 +170,9 @@ $carousel-title-shadow:                        1px 2px 3px rgba(0,0,0,.6) !defau
 
 .fa-stacked {
      font-size: 1em !important;
-     margin : -6px;
+     margin : -.4em;
      vertical-align: top;
-     top: 6px;
-     // bottom: -8px;
-     // left: -6px;
-     // right: -20px;
+     top: .4em;
 }
 
 .fa-stack-inner {
